# Cost-Free-Incremental-Learning

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  training.py
backbone/: __init__.py
cf_il/: config.py  generate_dirichlet.py  main.py  model.py  recover_memory.py  train.py
cf_il/conf/: config.py  config.yaml  constants.py
datasets/: perm_mnist.py  seq_cifar10.py  seq_mnist.py
models/: agem.py
notebooks/: base_implementation_colab.ipynb  cfil_colab.ipynb
scripts/: test_recovery_memeory.py  test_recovery_memory.py
utils/: status.py  tb_logger.py  training.py
