[metadata]
name = cf_il
version = 0.1.0
description = "Cost-Free Incremental Learning"
long_description = file: README.md
classifiers =
    Programming Language :: Python
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    torch~=1.11.0
    torch-tb-profiler~=0.4.0
    tensorboard~=2.9.0
